# appai-backend

./: .env.example  Dockerfile  README.md  alembic.ini  fly.toml  pyproject.toml  requirements.txt
alembic/: env.py
app/: __init__.py  config.py  deps.py  main.py
app/agents/: orchestrator.py
app/agents/tools/: base.py  calculator.py  http_fetch.py  notes.py  registry.py  web_search.py
app/api/: router.py
app/api/routes/: agents.py  chat.py  conversations.py  files.py  health.py  memory.py  models.py  personalities.py  voice.py
app/core/: exceptions.py  logging.py  security.py
app/db/: base.py  session.py
app/db/models/: __init__.py  conversation.py  file.py  memory.py  message.py  personality.py  user.py
app/files/: extractor.py  storage.py
app/llm/: base.py  registry.py  retry.py  types.py
app/llm/providers/: anthropic_provider.py  deepseek_provider.py  gemini_provider.py  ollama_provider.py  openai_provider.py
app/memory/: episodic.py  long_term.py  manager.py  short_term.py
app/schemas/: agent.py  chat.py  conversation.py  files.py  health.py  memory.py  personality.py
app/services/: chat_service.py  conversation_service.py  personality_service.py  titling.py
app/voice/: stt.py  tts.py
tests/: test_smoke.py
