[project]
name = "appai-backend"
version = "0.1.0"
description = "Personal AI assistant backend (FastAPI)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

dependencies = [
    # web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1",
    "httpx>=0.27",

    # config / validation
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",

    # db
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "pgvector>=0.3",

    # auth
    "pyjwt>=2.9",
    "passlib[bcrypt]>=1.7",

    # LLM SDKs
    "openai>=1.40",
    "anthropic>=0.34",
    "google-genai>=0.3",

    # utility
    "tenacity>=8.5",
    "structlog>=24.4",
    "orjson>=3.10",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
voice = [
    "faster-whisper>=1.0",
    "edge-tts>=6.1",
]
files = [
    "pypdf>=4.3",
    "python-docx>=1.1",
    "pillow>=10.4",
]
embeddings-local = [
    "sentence-transformers>=3.0",
]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]
# E501: line length — we use a formatter for this.
# B008: FastAPI's canonical `File(...)` / `Depends(...)` / `Form(...)` in defaults.
# ASYNC240: pathlib in async functions — fine for tiny routine file ops; we don't
#   run the backend under trio and thread-offloading a .exists() call is overkill.
ignore = ["E501", "B008", "ASYNC240"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
